数据分发服务添加康师傅前置机定制接口